...
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="gaK-84-kaj">
                                <rect key="frame" x="16" y="364" width="361" height="40"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AdN-Mj-aJe">
                                        <rect key="frame" x="0.0" y="0.0" width="178" height="40"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PP2-MH-EeM">
                                                <rect key="frame" x="0.0" y="0.0" width="55" height="40"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="604-EQ-ndl">
                                                <rect key="frame" x="60" y="0.0" width="118" height="41"/>
                                                <segments>
                                                    <segment title="" image="calendar" catalog="system"/>
                                                    <segment title="" image="dollarsign.circle" catalog="system"/>
                                                </segments>
                                                <connections>
                                                    <action selector="sortByDateOrValue:" destination="Y6W-OH-hqX" eventType="valueChanged" id="pya-HA-SiN"/>
                                                </connections>
                                            </segmentedControl>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="fbH-90-iAl">
                                        <rect key="frame" x="183" y="0.0" width="178" height="40"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cks-mP-jFy">
                                                <rect key="frame" x="0.0" y="0.0" width="66.666666666666671" height="40"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="HO2-oA-SXB">
...
                            <constraint firstItem="FgW-s5-I0r" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="rFI-HZ-7Od"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="mPb-ie-Gk2" secondAttribute="trailing" id="tUK-MC-flu"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="FgW-s5-I0r" secondAttribute="trailing" constant="16" id="w0q-SB-jMA"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="hello" id="ovy-lU-rEO">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="person.circle" catalog="system" id="6n2-Lt-lgc">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="goToUserPage:" destination="Y6W-OH-hqX" id="Xc3-Ux-bdY"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Add" id="nEZ-zi-7U8">
                            <connections>
                                <action selector="addMovementButton:" destination="Y6W-OH-hqX" id="mOd-Ea-myz"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
