...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                </variation>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fmO-aJ-kfF">
                                <rect key="frame" x="16" y="299" width="398" height="54"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="54" id="hi1-s0-2Tc">
                                        <variation key="heightClass=regular-widthClass=regular" constant="75"/>
                                    </constraint>
                                </constraints>
...
                                <buttonConfiguration key="configuration" style="plain">
                                    <backgroundConfiguration key="background" cornerRadius="20">
                                        <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
                                        <color key="strokeColor" systemColor="labelColor"/>
                                    </backgroundConfiguration>
                                    <attributedString key="attributedTitle">
                                        <fragment content="Log In">
                                            <attributes>
                                                <font key="NSFont" metaFont="system" size="20"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
                                    <color key="baseForegroundColor" systemColor="labelColor"/>
...
                                    <constraint firstAttribute="height" constant="38" id="rsT-NN-hpG">
                                        <variation key="heightClass=regular-widthClass=compact" constant="38"/>
                                    </constraint>
                                </constraints>
                                <variation key="heightClass=regular-widthClass=regular" distribution="fillEqually"/>
                            </stackView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DIS-RV-UIC">
                                <rect key="frame" x="16" y="233" width="398" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="lJ5-H8-zrL">
                                        <variation key="heightClass=regular-widthClass=compact" constant="50"/>
                                        <variation key="heightClass=regular-widthClass=regular" constant="75"/>
                                    </constraint>
...
