...

     func updateGraphView() {
        entries = generateChartDataEntries()

        guard entries.count >= 2 else {
            graphView.isHidden = true
            UsefulFunctions.showAlert(title: "Warning", message: "There aren't enough movements to display, add more", viewController: self)
            return
        }
        movementView.isHidden = true
        graphView.isHidden = false
        
        let data = createBarChartData(with: entries)
...
