...
                            <constraint firstItem="Pam-eC-KQg" firstAttribute="top" secondItem="Yyf-or-EzH" secondAttribute="bottom" constant="16" id="jBQ-sq-o3I"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Yyf-or-EzH" secondAttribute="trailing" constant="16" id="p1g-zN-lnX"/>
                            <constraint firstItem="Pam-eC-KQg" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="q7s-AQ-o6H"/>
                            <constraint firstItem="AMV-sQ-VcP" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="vKw-fw-WXm"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="New Movement" id="vpy-aT-kfG"/>
                    <connections>
                        <outlet property="amountTextField" destination="Yyf-or-EzH" id="bgO-wW-oA9"/>
                        <outlet property="datePicker" destination="v1m-Yv-YrA" id="nBO-Gt-mI9"/>
                        <outlet property="decriptionTextView" destination="AMV-sQ-VcP" id="uID-uh-sBz"/>
                        <outlet property="incomeSwitch" destination="183-aI-tIY" id="Bw1-o8-TMY"/>
                        <outlet property="tagScrollView" destination="v3P-yP-0Fa" id="eCg-u8-kcW"/>
...
